--- a/estilos.css
+++ b/estilos.css
@@ -1,37 +1,42 @@
 * {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .contenedor {
     background-image: url('img/imagen.jpg');
-    background-size: cover; /* Para cubrir todo el contenedor */
-    background-position: center; /* Para centrar la imagen */
-    background-repeat: no-repeat; /* Para que la imagen no se repita */
-    background-color: rgba(0, 0, 0, 0.8); /* Opacidad del 80% */
-    width: 100vw;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 100%;
     height: 100vh;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 p {
-    font-size: 3.5em; /* Ajusta el tamaño de la fuente según tus preferencias */
-    padding: 15%;
-    color: white; /* Cambia el color del texto a blanco */
-    font-family: "Montserrat", sans-serif; /* Cambia la fuente a "Montserrat" */
-    border-bottom: none; /* Elimina la línea negra debajo del texto */
-    text-shadow: 2px 2px 4px black; /* Agrega sombra al texto */
+    font-size: 24px; /* Tamaño de fuente fijo para dispositivos grandes */
+    padding: 1em;
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    border-bottom: none;
+    text-shadow: 2px 2px 4px black;
 }
 
 button {
-    font-size: 2em; /* Ajusta el tamaño de la fuente según tus preferencias */
-    padding: 0.75em;
-    background-color: rgb(0, 191, 255); /* Cambia el color de fondo del botón */
-    color: white; /* Cambia el color del texto del botón a blanco */
-    border: none; /* Quita el borde del botón */
-    border-radius: 5px; /* Agrega bordes redondeados al botón */
-    cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
-    
-    box-shadow: 0 0 20px 5px rgba(83, 101, 204, 0.5); /* Agrega luminosidad al botón */
+    font-size: 24px; /* Tamaño de fuente fijo para dispositivos grandes */
+    padding: 0.75em 1.5em;
+    background-color: rgb(0, 191, 255);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 10px 2px rgba(83, 101, 204, 0.5);
+    margin-top: 20px;
 }
 
 #yesBtn {
@@ -40,7 +45,18 @@ button {
 
 #noBtn {
     position: absolute;
+    bottom: 5%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
+@media screen and (min-width: 768px) {
+    p {
+        font-size: 3em; /* Tamaño de fuente más grande para dispositivos grandes */
+    }
 
-
+    button {
+        font-size: 3em; /* Tamaño de fuente más grande para dispositivos grandes */
+        padding: 0.75em 1.5em;
+    }
+}
