--- a/estilos.css
+++ b/estilos.css
@@ -19,7 +19,7 @@
 }
 
 p {
-    font-size: 24px; /* Tamaño de fuente fijo para dispositivos grandes */
+    font-size: 24px;
     padding: 1em;
     color: white;
     font-family: "Montserrat", sans-serif;
